--- a/Dockerfile.rpi
+++ b/Dockerfile.rpi
@@ -1,6 +1,7 @@
 FROM balenalib/raspberry-pi-debian-python
 WORKDIR /app
 COPY server.py /app
+RUN apt-get update && apt-get install -y build-essential
 RUN pip install pip install Flask flask_cors gunicorn eventlet==0.30.2
 EXPOSE 8586
 CMD ["python", "-m", "gunicorn", "-b", "0.0.0.0:8586", "--log-level=debug","--timeout", "300","server:app"]
