--- a/Dockerfile.x86
+++ b/Dockerfile.x86
@@ -1,7 +1,7 @@
-FROM balenalib/raspberry-pi-debian-python
+FROM python:3.8-alpine
 WORKDIR /app
 COPY . /app
-RUN apt-get update && apt-get install -y build-essential
+RUN apk update && apk add build-base
 RUN pip install pip install Flask flask_cors gunicorn eventlet==0.30.2
 EXPOSE 8586
 CMD ["python", "-m", "gunicorn", "-b", "0.0.0.0:8586", "--log-level=debug","--timeout", "300","app:app"]
