--- a/.github/workflows/x86build.yml
+++ b/.github/workflows/x86build.yml
@@ -15,7 +15,7 @@ jobs:
                 DOCKERUSR: ${{ secrets.DOCKERUSR }}
               run: |
                 echo "Build Docker"
-                docker build -t ${DOCKERUSR}/backuprecordsearcher:latest .
+                docker build -t ${DOCKERUSR}/backuprecordsearcher:latest -f Dockerfile.x86 .
             - name: push to docker hub
               env:
                 DOCKERUSR: ${{ secrets.DOCKERUSR }}
